# apsta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  apsta.py  apsta_gtk.py  install.sh  karan.txt  pyproject.toml  setup.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
apsta_cli/: __init__.py  commands.py  common.py  completion.py  hardware.py  hotspot.py  system.py
apsta_cli/cmd/: detect.py  status_config.py  usb.py
apsta_cli/net/: __init__.py  start.py  stop.py  support.py
apsta_gui/: __init__.py  app.py  helpers.py
apsta_gui/mixins/: __init__.py  actions.py  pages.py
cosmic-applet-apsta/: Cargo.toml  README.md  justfile
cosmic-applet-apsta/data/: com.github.apsta.Applet.desktop
cosmic-applet-apsta/src/: app.rs  main.rs
debian/: apsta.install  apsta.postinst  apsta.prerm  changelog  control  copyright  rules
debian/source/: options
gtk-ui/: apsta-gtk  com.github.apsta.Gtk.desktop  install.sh
scripts/: bump_version.py
system/: apsta-sleep  apsta.service
tests/: test_client_management.py  test_common_runtime.py  test_hardware_capability.py  test_hotspot_helpers.py  test_profiles.py  test_start_stop_flow.py
