[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apsta"
version = "0.5.6"
description = "Smart AP+STA WiFi hotspot manager for Linux"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "apsta contributors" }]
maintainers = [{ name = "krotrn" }]
keywords = ["wifi", "hotspot", "ap", "sta", "networkmanager", "linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/krotrn/apsta"

[project.scripts]
apsta = "apsta:main"
apsta-gtk = "apsta_gtk:main"

[tool.setuptools]
py-modules = ["apsta", "apsta_gtk"]
include-package-data = true